Commit 21/01: Introdotta l'Internalizzazione attraverso ngx-translate (italiano ed inglese).

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,7 +4,8 @@
     "SURNAME": "Surname",
     "DATE": "Date",
     "CITY": "City",
-    "FISCALCODE": "Fiscal code",
+    "CAP": "Postal Code",
+    "FISCALCODE": "Fiscal Code",
     "NUMBER": "Number",
     "ADDRESS": "Address",
     "HOUSENUMBER": "House number",
@@ -40,8 +41,106 @@
     "HOME": "Course followed by",
     "STUDENT": "Student",
     "PROFESSOR": "Professor",
+    "COURSE": "Course",
     "SAVE": "Save",
     "BACK": "Back",
     "LEAVE": "Leave"
+  },
+  "STUDENT-FORM": {
+    "NAME-LABEL": "Name",
+    "NAME-PLACEHOLDER": "Enter student's name",
+    "NAME-REQUIRED": "Name is required",
+    "NAME-LENGTH": "You have entered more than 50 characters",
+    "SURNAME-LABEL": "Surname",
+    "SURNAME-PLACEHOLDER": "Enter student's surname",
+    "SURNAME-REQUIRED": "Surname is required",
+    "SURNAME-LENGTH": "You have entered more than 60 characters",
+    "DATE-LABEL": "Date of birth",
+    "DATE-PLACEHOLDER": "Enter student's date of birth",
+    "CITY-LABEL": "City of residence",
+    "CITY-PLACEHOLDER": "Enter student's city of residence",
+    "CITY-REQUIRED": "City of residence is required",
+    "CITY-LENGTH": "You have entered more than 50 characters",
+    "CAP-LABEL": "Postal Code",
+    "CAP-PLACEHOLDER": "Enter the postal Code of the city",
+    "CAP-REQUIRED": "Postal Code is required",
+    "CAP-LENGTH": "You have entered more than 6 characters",
+    "ADDRESS-LABEL": "Address",
+    "ADDRESS-PLACEHOLDER": "Enter student's residential address",
+    "ADDRESS-REQUIRED": "Residential address is required",
+    "ADDRESS-LENGTH": "You have entered more than 80 characters",
+    "HOUSENUMBER-LABEL": "House number",
+    "HOUSENUMBER-PLACEHOLDER": "Enter student's house number",
+    "HOUSENUMBER-REQUIRED": "House number is required",
+    "HOUSENUMBER-LENGTH": "You have entered more than 10 characters",
+    "CODE-LABEL": "Fiscal Code",
+    "CODE-PLACEHOLDER": "Enter student's Fiscal Code",
+    "CODE-REQUIRED": "Fiscal Code is required",
+    "CODE-LENGTH": "You have entered more than 30 characters",
+    "NUMBER-LABEL": "Telephone number",
+    "NUMBER-PLACEHOLDER": "Enter student's telephone number",
+    "NUMBER-REQUIRED": "Telephone number is required",
+    "NUMBER-LENGTH": "You have entered more than 30 characters",
+    "BACK": "Back",
+    "SAVE": "Save student"
+  },
+  "PROFESSOR-FORM": {
+    "NAME-LABEL": "Name",
+    "NAME-PLACEHOLDER": "Enter professor's name",
+    "NAME-REQUIRED": "Name is required",
+    "NAME-LENGTH": "You have entered more than 50 characters",
+    "SURNAME-LABEL": "Surname",
+    "SURNAME-PLACEHOLDER": "Enter professor's surname",
+    "SURNAME-REQUIRED": "Surname is required",
+    "SURNAME-LENGTH": "You have entered more than 60 characters",
+    "DATE-LABEL": "Date of birth",
+    "DATE-PLACEHOLDER": "Enter professor's date of birth",
+    "CITY-LABEL": "City of residence",
+    "CITY-PLACEHOLDER": "Enter professor's city of residence",
+    "CITY-REQUIRED": "City of residence is required",
+    "CITY-LENGTH": "You have entered more than 50 characters",
+    "CAP-LABEL": "Postal Code",
+    "CAP-PLACEHOLDER": "Enter the postal Code of the city",
+    "CAP-REQUIRED": "Postal Code is required",
+    "CAP-LENGTH": "You have entered more than 6 characters",
+    "ADDRESS-LABEL": "Address",
+    "ADDRESS-PLACEHOLDER": "Enter professor's residential address",
+    "ADDRESS-REQUIRED": "Residential address is required",
+    "ADDRESS-LENGTH": "You have entered more than 80 characters",
+    "HOUSENUMBER-LABEL": "House number",
+    "HOUSENUMBER-PLACEHOLDER": "Enter professor's house number",
+    "HOUSENUMBER-REQUIRED": "House number is required",
+    "HOUSENUMBER-LENGTH": "You have entered more than 10 characters",
+    "CODE-LABEL": "Fiscal Code",
+    "CODE-PLACEHOLDER": "Enter professor's Fiscal Code",
+    "CODE-REQUIRED": "Fiscal Code is required",
+    "CODE-LENGTH": "You have entered more than 30 characters",
+    "NUMBER-LABEL": "Telephone number",
+    "NUMBER-PLACEHOLDER": "Enter professor's telephone number",
+    "NUMBER-REQUIRED": "Telephone number is required",
+    "NUMBER-LENGTH": "You have entered more than 30 characters",
+    "BACK": "Back",
+    "SAVE": "Save professor"
+  },
+  "COURSE-FORM": {
+    "NAME-LABEL": "Name",
+    "NAME-PLACEHOLDER": "Enter course name",
+    "NAME-REQUIRED": "Name is required",
+    "NAME-LENGTH": "You have entered more than 100 characters",
+    "DESCRIPTION-LABEL": "Description",
+    "DESCRIPTION-PLACEHOLDER": "Enter course description",
+    "DESCRIPTION-REQUIRED": "Course description is required",
+    "DESCRIPTION-LENGTH": "You have entered more than 200 characters",
+    "PROFESSOR-LABEL": "Professor",
+    "BEGIN-LABEL": "Course start date",
+    "BEGIN-PLACEHOLDER": "Enter course start date",
+    "END-LABEL": "Course end date",
+    "END-PLACEHOLDER": "Enter course end date",
+    "BACK": "Back",
+    "SAVE": "Save course"
+  },
+  "PAGINATOR": {
+    "ITEMS": "Items per page",
+    "OF": "of"
   }
 }
