--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -4,6 +4,7 @@
     "SURNAME": "Cognome",
     "DATE": "Data",
     "CITY": "Comune",
+    "CAP": "CAP",
     "FISCALCODE": "Codice fiscale",
     "NUMBER": "Telefono",
     "ADDRESS": "Indirizzo",
@@ -40,8 +41,106 @@
     "HOME": "Corsi seguiti da",
     "STUDENT": "Studente",
     "PROFESSOR": "Professore",
+    "COURSE": "Corso",
     "SAVE": "Salva",
     "BACK": "Indietro",
     "LEAVE": "Abbandona"
+  },
+  "STUDENT-FORM": {
+    "NAME-LABEL": "Nome",
+    "NAME-PLACEHOLDER": "Inserisci il nome dello studente",
+    "NAME-REQUIRED": "Il nome è richiesto",
+    "NAME-LENGTH": "Hai inserito più di 50 caratteri",
+    "SURNAME-LABEL": "Cognome",
+    "SURNAME-PLACEHOLDER": "Inserisci il cognome dello studente",
+    "SURNAME-REQUIRED": "Il cognome è richiesto",
+    "SURNAME-LENGTH": "Hai inserito più di 60 caratteri",
+    "DATE-LABEL": "Data di nascita",
+    "DATE-PLACEHOLDER": "Inserisci la data di nascita dello studente",
+    "CITY-LABEL": "Comune di residenza",
+    "CITY-PLACEHOLDER": "Inserisci il comune di residenza dello studente",
+    "CITY-REQUIRED": "Il comune di residenza è richiesto",
+    "CITY-LENGTH": "Hai inserito più di 50 caratteri",
+    "CAP-LABEL": "CAP",
+    "CAP-PLACEHOLDER": "Inserisci il cap del comune di residenza",
+    "CAP-REQUIRED": "Il Cap è richiesto",
+    "CAP-LENGTH": "Hai inserito più di 6 caratteri",
+    "ADDRESS-LABEL": "Indirizzo",
+    "ADDRESS-PLACEHOLDER": "Inserisci l'indirizzo di residenza dello studente",
+    "ADDRESS-REQUIRED": "L'indirizzo di residenza è richiesto",
+    "ADDRESS-LENGTH": "Hai inserito più di 80 caratteri",
+    "HOUSENUMBER-LABEL": "Numero civico",
+    "HOUSENUMBER-PLACEHOLDER": "Inserisci il numero civico della residenza dello studente",
+    "HOUSENUMBER-REQUIRED": "Il numero civico è richiesto",
+    "HOUSENUMBER-LENGTH": "Hai inserito più di 10 caratteri",
+    "CODE-LABEL": "Codice fiscale",
+    "CODE-PLACEHOLDER": "Inserisci il codice fiscale dello studente",
+    "CODE-REQUIRED": "Il codice fiscale è richiesto",
+    "CODE-LENGTH": "Hai inserito più di 30 caratteri",
+    "NUMBER-LABEL": "Numero di telefono",
+    "NUMBER-PLACEHOLDER": "Inserisci il numero di telefono dello studente",
+    "NUMBER-REQUIRED": "Il numero di telefono è richiesto",
+    "NUMBER-LENGTH": "Hai inserito più di 30 caratteri",
+    "BACK": "Indietro",
+    "SAVE": "Salva lo studente"
+  },
+  "PROFESSOR-FORM": {
+    "NAME-LABEL": "Nome",
+    "NAME-PLACEHOLDER": "Inserisci il nome del docente",
+    "NAME-REQUIRED": "Il nome è richiesto",
+    "NAME-LENGTH": "Hai inserito più di 50 caratteri",
+    "SURNAME-LABEL": "Cognome",
+    "SURNAME-PLACEHOLDER": "Inserisci il cognome del docente",
+    "SURNAME-REQUIRED": "Il cognome è richiesto",
+    "SURNAME-LENGTH": "Hai inserito più di 60 caratteri",
+    "DATE-LABEL": "Data di nascita",
+    "DATE-PLACEHOLDER": "Inserisci la data di nascita del docente",
+    "CITY-LABEL": "Comune di residenza",
+    "CITY-PLACEHOLDER": "Inserisci il comune di residenza del docente",
+    "CITY-REQUIRED": "Il comune di residenza è richiesto",
+    "CITY-LENGTH": "Hai inserito più di 50 caratteri",
+    "CAP-LABEL": "CAP",
+    "CAP-PLACEHOLDER": "Inserisci il cap del comune di residenza",
+    "CAP-REQUIRED": "Il Cap è richiesto",
+    "CAP-LENGTH": "Hai inserito più di 6 caratteri",
+    "ADDRESS-LABEL": "Indirizzo",
+    "ADDRESS-PLACEHOLDER": "Inserisci l'indirizzo di residenza del docente",
+    "ADDRESS-REQUIRED": "L'indirizzo di residenza è richiesto",
+    "ADDRESS-LENGTH": "Hai inserito più di 80 caratteri",
+    "HOUSENUMBER-LABEL": "Numero civico",
+    "HOUSENUMBER-PLACEHOLDER": "Inserisci il numero civico della residenza del docente",
+    "HOUSENUMBER-REQUIRED": "Il numero civico è richiesto",
+    "HOUSENUMBER-LENGTH": "Hai inserito più di 10 caratteri",
+    "CODE-LABEL": "Codice fiscale",
+    "CODE-PLACEHOLDER": "Inserisci il codice fiscale del docente",
+    "CODE-REQUIRED": "Il codice fiscale è richiesto",
+    "CODE-LENGTH": "Hai inserito più di 30 caratteri",
+    "NUMBER-LABEL": "Numero di telefono",
+    "NUMBER-PLACEHOLDER": "Inserisci il numero di telefono del docente",
+    "NUMBER-REQUIRED": "Il numero di telefono è richiesto",
+    "NUMBER-LENGTH": "Hai inserito più di 30 caratteri",
+    "BACK": "Indietro",
+    "SAVE": "Salva il docente"
+  },
+  "COURSE-FORM": {
+    "NAME-LABEL": "Nome",
+    "NAME-PLACEHOLDER": "Inserisci il nome del corso",
+    "NAME-REQUIRED": "Il nome è richiesto",
+    "NAME-LENGTH": "Hai inserito più di 100 caratteri",
+    "DESCRIPTION-LABEL": "Descrizione",
+    "DESCRIPTION-PLACEHOLDER": "Inserisci una descrizione del corso",
+    "DESCRIPTION-REQUIRED": "La descrizione del corso è richiesta",
+    "DESCRIPTION-LENGTH": "Hai inserito più di 200 caratteri",
+    "PROFESSOR-LABEL": "Docente",
+    "BEGIN-LABEL": "Data di inizio corso",
+    "BEGIN-PLACEHOLDER": "Inserisci la data di inizio del corso",
+    "END-LABEL": "Data di fine corso",
+    "END-PLACEHOLDER": "Inserisci la data di fine del corso",
+    "BACK": "Indietro",
+    "SAVE": "Salva il corso"
+  },
+  "PAGINATOR": {
+    "ITEMS": "Oggetti per pagina",
+    "OF": "di"
   }
 }
